--- a/index.html
+++ b/index.html
@@ -11,28 +11,28 @@
     <h1>3° Informática Vespertino</h1>
     <h1>Instituto Federal do Paraná-Campus Irati</h1>
 
-    <H2>RDE03</H2>
-    <a href="">Conceitos fundamentais e HTML</a>
+    <h2>RDE03-Conceitos Fundamentais e HTML</h2>
+    <a href="https://gabrieledorgi.github.io/RDE03H/">Conceitos fundamentais e HTML</a>
 
-    <h2>RDE04</h2>
-    <a href="">Imagens e Listas</a>
+    <h2>RDE04-Imagens e Listas</h2>
+    <a href="https://gabrieledorgi.github.io/RDE04H/">Imagens e Listas</a>
 
-    <h2>Meu Hobbie<h2>
-    <a href="">Hobbie</a>
+    <h2>Meu Hobbie</h2>
+    <a href="https://gabrieledorgi.github.io/HobbieH/">Hobbie</a>
 
-    <h2>RDE05/h2>
-    <a href="">Hyperlinks</a>
+    <h2>RDE05-Hyperlinks</h2>
+    <a href="https://gabrieledorgi.github.io/RDE05H/">Hyperlinks</a>
 
-    <h2>RDE06</h2>
-    <a href="">Software de Versionamento</a>
+    <h2>RDE06-Software de Versionamento</h2>
+    <a href="https://gabrieledorgi.github.io/RDE06H/">Software de Versionamento</a>
 
-    <h2>RDE07</h2>
-    <a href="">Branches e Hospedagem</a>
+    <h2>RDE07-Branches e Hospedagem</h2>
+    <a href="https://gabrieledorgi.github.io/RDE07H/">Branches e Hospedagem</a>
 
-    <h2>RDE08</h2>
-    <a href="">Tags</a>
+    <h2>RDE08-Tags</h2>
+    <a href="https://gabrieledorgi.github.io/RDE08H/">Tags</a>
 
-    <h2>RDE09</h2>
+    <h2>RDE09-Multimídias</h2>
     <a href="">Multimídias</a>
 
 </body>
