--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     <a href="https://gabrieledorgi.github.io/RDE04H/">Imagens e Listas</a>
 
     <h2>Meu Hobbie</h2>
-    <a href="https://gabrieledorgi.github.io/HobbieH/">Hobbie</a>
+    <a href="https://gabrieledorgi.github.io/Hobbie/">Hobbie</a>
+
+    <h2>Meu Currículo</h2>
+    <a href="https://gabrieledorgi.github.io/CH/">Currículo</a>
 
     <h2>RDE05-Hyperlinks</h2>
     <a href="https://gabrieledorgi.github.io/RDE05H/">Hyperlinks</a>
