--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="https://gabrieledorgi.github.io/RDE03H/">Conceitos fundamentais e HTML</a>
 
     <h2>RDE04-Imagens e Listas</h2>
-    <a href="https://gabrieledorgi.github.io/RDE04H/">Imagens e Listas</a>
+    <a href="https://gabrieledorgi.github.io/RDE04HH/">Imagens e Listas</a>
 
     <h2>Meu Hobbie</h2>
     <a href="https://gabrieledorgi.github.io/Hobbie/">Hobbie</a>
@@ -36,7 +36,7 @@
     <a href="https://gabrieledorgi.github.io/RDE08H/">Tags</a>
 
     <h2>RDE09-Multimídias</h2>
-    <a href="">Multimídias</a>
+    <a href="https://gabrieledorgi.github.io/MultiH/">Multimídias</a>
 
 </body>
 </html>
