--- a/index.html
+++ b/index.html
@@ -41,5 +41,8 @@
     <h2>RDE10-CSS</h2>
     <a href="https://gabrieledorgi.github.io/CSS/">CSS</a>
 
+    <h2>RDE11-Agrupamento e Seletores Personalizados</h2>
+    <a href="https://gabrieledorgi.github.io/RDE11-AgrupamentoESeletores/">AgrupamentoESeletores</a>
+
 </body>
 </html>
